tests/fixtures/invalid/pow_bool_list_bool.py
# Cannot call pow() with Bool, List[int], Bool
x = pow(True, [1, 2, 3], True)
